--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#234D63</color>
     <color name="colorPrimaryDark">#002539</color>
     <color name="colorAccent">#F48760</color>
+
+    <color name="colorGrey1">#333333</color>
+    <color name="colorGrey2">#4F4F4F</color>
+    <color name="colorGrey3">#828282</color>
+    <color name="colorGrey4">#BDBDBD</color>
+    <color name="colorGrey5">#E0E0E0</color>
+    <color name="colorGrey6">#F2F2F2</color>
 </resources>
