--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,11 @@
 <resources>
     <color name="colorPrimary">#234D63</color>
     <color name="colorPrimaryDark">#002539</color>
-    <color name="colorAccent">#F48760</color>
+    <color name="colorAccent">#f48760</color>
+    <color name="colorAccentLight">#ffb88e</color>
+
+    <color name="mainBackgroundGrey">#EFEFEF</color>
+    <color name="mainTextLighterBlack">#212121</color>
 
     <color name="colorGrey1">#333333</color>
     <color name="colorGrey2">#4F4F4F</color>
@@ -10,4 +14,5 @@
     <color name="colorGrey4">#BDBDBD</color>
     <color name="colorGrey5">#E0E0E0</color>
     <color name="colorGrey6">#F2F2F2</color>
+    <color name="colorGrey7">#F9F9F9</color>
 </resources>
