--- a/app/src/main/res/layout/fragment_add_request_summary.xml
+++ b/app/src/main/res/layout/fragment_add_request_summary.xml
@@ -222,7 +222,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textViewAddRequestSummaryTaskLocationTitle"
+                    android:id="@+id/textViewAddRequestSummaryLocationTitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
@@ -237,6 +237,19 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_chainStyle="packed" />
 
+                <TextView
+                    android:id="@+id/textViewAddRequestSummaryLocationName"
+                    android:layout_width="0dp"
+                    android:layout_height="18dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:text="Location Name Placeholder"
+                    android:textColor="@color/colorGrey3"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryLocationTitle" />
+
 
                 <com.caltruism.assist.utils.CustomMapView
                     android:id="@+id/mapViewAddRequestSummary"
@@ -245,7 +258,7 @@
                     android:layout_marginTop="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryTaskLocationTitle" />
+                    app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryLocationName" />
 
                 <View
                     android:id="@+id/viewAddressBackground"
@@ -265,12 +278,12 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:text="1801 Euclid Ave, San Francisco, CA 94709"
+                    android:text="Location Address Placeholder"
                     android:textColor="@color/colorGrey3"
                     android:textSize="14sp"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintBottom_toBottomOf="@+id/viewAddressBackground"
                     app:layout_constraintEnd_toEndOf="@+id/viewAddressBackground"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/viewAddressBackground" />
 
 
