--- a/app/src/main/res/layout/fragment_add_request_summary.xml
+++ b/app/src/main/res/layout/fragment_add_request_summary.xml
@@ -69,7 +69,7 @@
                     android:layout_width="13dp"
                     android:layout_height="14dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="8dp"
                     android:tint="@color/colorAccent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryDateTitle"
@@ -79,8 +79,8 @@
                     android:id="@+id/textViewAddRequestSummaryDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="7dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
                     android:text="Sun, January 1st"
                     android:textColor="@color/colorGrey3"
                     android:textSize="14sp"
@@ -92,7 +92,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="75dp"
+                    android:layout_marginTop="76dp"
                     android:text="Type"
                     android:textColor="@color/mainTextLighterBlack"
                     android:textSize="16sp"
@@ -104,7 +104,7 @@
                     android:layout_width="13dp"
                     android:layout_height="14dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="8dp"
                     android:tint="@color/colorAccent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryTypeTitle"
@@ -115,8 +115,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginStart="7dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
                     android:text="Type Placeholder"
                     android:textColor="@color/colorGrey3"
                     android:textSize="14sp"
@@ -141,7 +141,7 @@
                     android:layout_width="13dp"
                     android:layout_height="14dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="8dp"
                     android:tint="@color/colorAccent"
                     app:layout_constraintStart_toStartOf="@+id/guidelineAddRequestSummary"
                     app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryTimeTitle"
@@ -151,8 +151,8 @@
                     android:id="@+id/textViewAddRequestSummaryTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="7dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
                     android:text="12:00 AM"
                     android:textColor="@color/colorGrey3"
                     android:textSize="14sp"
@@ -164,7 +164,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="75dp"
+                    android:layout_marginTop="76dp"
                     android:text="Duration"
                     android:textColor="@color/mainTextLighterBlack"
                     android:textSize="16sp"
@@ -176,7 +176,7 @@
                     android:layout_width="13dp"
                     android:layout_height="14dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="7dp"
+                    android:layout_marginTop="8dp"
                     android:tint="@color/colorAccent"
                     app:layout_constraintStart_toStartOf="@+id/guidelineAddRequestSummary"
                     app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryDurationTitle"
@@ -187,8 +187,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:layout_marginStart="7dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="4dp"
                     android:text="1 hr 45 mins"
                     android:textColor="@color/colorGrey3"
                     android:textSize="14sp"
@@ -224,7 +224,7 @@
                 <TextView
                     android:id="@+id/textViewAddRequestSummaryLocationTitle"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="24dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
@@ -251,7 +251,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textViewAddRequestSummaryLocationTitle" />
 
 
-                <com.caltruism.assist.utils.CustomMapView
+                <com.caltruism.assist.util.CustomMapView
                     android:id="@+id/mapViewAddRequestSummary"
                     android:layout_width="0dp"
                     android:layout_height="200dp"
