--- a/app/src/main/res/menu/menu_create_request.xml
+++ b/app/src/main/res/menu/menu_create_request.xml
@@ -5,9 +5,10 @@
     tools:context=".activity.AddRequestActivity">
 
     <item
-        android:id="@+id/action_close"
+        android:id="@+id/actionClose"
         android:icon="@drawable/ic_close_white_24dp"
         android:orderInCategory="300"
+        android:title="close"
         app:showAsAction="ifRoom" />
 
 </menu>
