--- a/app/src/main/res/layout/activity_add_request.xml
+++ b/app/src/main/res/layout/activity_add_request.xml
@@ -18,7 +18,7 @@
         app:theme="@style/ToolBarStyle">
 
         <TextView
-            android:id="@+id/textViewAddRequestTitle"
+            android:id="@+id/textViewAddRequestToolbarTitle"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +77,6 @@
         android:layout_marginStart="16dp"
         android:enabled="false"
         android:text="NEXT"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -92,11 +91,12 @@
         android:layout_marginStart="16dp"
         android:text="EDIT"
         android:visibility="invisible"
+        app:backgroundTint="@android:color/white"
+        app:strokeColor="@color/colorAccent"
+        app:strokeWidth="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:strokeColor="@color/colorAccent"
-        app:strokeWidth="2dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.design.button.MaterialButton
         android:id="@+id/buttonAddRequestRequest"
