--- a/app/src/main/res/menu/menu_volunteer_nav_drawer.xml
+++ b/app/src/main/res/menu/menu_volunteer_nav_drawer.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/volunteerprofile"
+            android:id="@+id/volunteerProfile"
             android:checked="false"
             android:icon="@drawable/ic_calendar_solid"
             android:title="Profile"/>
