--- a/app/src/main/res/layout/activity_get_member_type.xml
+++ b/app/src/main/res/layout/activity_get_member_type.xml
@@ -6,41 +6,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.button.MaterialButton
-        android:id="@+id/buttonDisabled"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:text="I Need Help"
-        app:layout_constraintBottom_toTopOf="@+id/buttonVolunteer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <android.support.design.button.MaterialButton
-        android:id="@+id/buttonVolunteer"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:text="I Want to Help"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginBottom="64dp"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageViewGetMemberTypeProfilePicture"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_marginBottom="80dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toTopOf="@+id/textViewGetMemberTypeName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_logo" />
+        android:src="@drawable/ic_profile_image_placeholder" />
+
+    <TextView
+        android:id="@+id/textViewGetMemberTypeUploadImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Upload Image"
+        android:textColor="@color/colorGrey6"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewGetMemberTypeProfilePicture" />
 
     <TextView
         android:id="@+id/textViewGetMemberTypeName"
@@ -72,4 +62,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewGetMemberTypeName" />
+    <android.support.design.button.MaterialButton
+        android:id="@+id/buttonDisabled"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:text="I Need Help"
+        app:layout_constraintBottom_toTopOf="@+id/buttonVolunteer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <android.support.design.button.MaterialButton
+        android:id="@+id/buttonVolunteer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:text="I Want to Help"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
