--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="colorGrey2">#4F4F4F</color>
     <color name="colorGrey3">#828282</color>
     <color name="colorGrey4">#BDBDBD</color>
-    <color name="colorGrey5">#E0E0E0</color>
+    <color name="colorGrey5">#e0e0e0</color>
     <color name="colorGrey6">#F2F2F2</color>
     <color name="colorGrey7">#F9F9F9</color>
 
