--- a/app/src/main/res/layout/activity_main_volunteer.xml
+++ b/app/src/main/res/layout/activity_main_volunteer.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/menu_volunteer_nav_drawer"
-        android:fitsSystemWindows="true"/>
+        android:fitsSystemWindows="false"/>
 
 </android.support.v4.widget.DrawerLayout>
