--- a/app/src/main/res/layout/activity_request_details.xml
+++ b/app/src/main/res/layout/activity_request_details.xml
@@ -93,7 +93,7 @@
                         android:layout_height="48dp"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
-                        android:src="@drawable/ic_profile_image_placeholder"
+                        android:src="@drawable/ic_user_solid"
                         card_view:civ_border_color="@color/colorAccent"
                         card_view:civ_border_width="1.5dp"
                         card_view:layout_constraintStart_toStartOf="parent"
