--- a/app/src/main/res/menu/menu_create_request.xml
+++ b/app/src/main/res/menu/menu_create_request.xml
@@ -9,6 +9,6 @@
         android:icon="@drawable/ic_close_white_24dp"
         android:orderInCategory="300"
         android:title="close"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
 </menu>
