--- a/app/src/main/res/layout/fragment_volunteer_task_list.xml
+++ b/app/src/main/res/layout/fragment_volunteer_task_list.xml
@@ -50,7 +50,7 @@
             <android.support.design.widget.TabItem
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Completed" />
+                android:text="Previous" />
         </android.support.design.widget.TabLayout>
 
     </android.support.design.widget.AppBarLayout>
